@@ -1,0 +1,3 @@
+language: r
+r:devel
+cache: packages
