@@ -1,11 +1,11 @@
 Package: metasens
 Title: Advanced Statistical Methods to Model and Adjust for Bias in Meta-Analysis
-Version: 0.3-0
+Version: 0.3-1-0
 Authors@R: c(person("Guido","Schwarzer", email="sc@imbi.uni-freiburg.de", role=c("aut","cre")),
     person("James","Carpenter", role="aut"),
     person("Gerta","Rücker", role="aut"))
 Depends: meta (>= 4.0-0)
-Date: 2016-02-16
+Date: 2016-07-20
 Description: The following methods are implemented to evaluate how sensitive the results of a meta-analysis are to potential bias in meta-analysis:
  - Copas selection model;
  - limit meta-analysis;
